# coding_agent_session_search

./: .gitignore  AGENTS.md  AGENT_FRIENDLINESS_REPORT.md  AGENT_INTRODUCTION.md  CHANGELOG.md  Cargo.toml  PLAN_FOR_ADVANCED_OPTIMIZATIONS_ROUND_1__OPUS.md  PLAN_TO_ADD_LIGHTWEIGHT_SEMANTIC_AND_HYBRID_SEARCH_TO_CASS.md  PLAN_TO_COMPUTE_ANALYTICS_STATS_IN_CASS__CODEX.md  PLAN_TO_COMPUTE_ANALYTICS_STATS_IN_CASS__OPUS.md  PLAN_TO_CREATE_GH_PAGES_WEB_EXPORT_APP.md  PLAN_TO_PORT_INSTALL_SCRIPTS_TO_RUST.md  QUICK_REFERENCE.md  README.md  RECOVERY_RUNBOOK.md  RESEARCH_FINDINGS.md  SEMANTIC_SEARCH_BEADS.md  SKILL.md  SYNC_STRATEGY.md  TESTING.md  TOON_INTEGRATION_BRIEF.md  UPGRADE_LOG.md  audit.toml  build.rs  extract_user_requests.py  install.ps1  install.sh
.beads/: README.md  beads.base.meta.json  beads.left.meta.json  config.yaml  issues.jsonl  issues.jsonl.pre_analytics_20260206T0656Z  last-touched  sync_base.jsonl
.beads/migration_baseline/: BASELINE_SUMMARY.md  SUMMARY.md  baseline_binary_size.txt  baseline_clippy.txt  baseline_connector_lines.txt  baseline_deps.txt  baseline_fmt.txt  baseline_search_lines.txt  baseline_search_quality.json  baseline_test_summary.txt  binary_size.txt
.beads/recovery_20260722T035230Z/: br_config_db.json  br_doctor.json  br_show_coding_agent_session_search-cass-fleet-resilience-20260608-uojcg.1.json  br_sync_status.json  manifest.txt
.beads/recovery_20260722T044535Z/: br_doctor.json  br_show_coding_agent_session_search-guided-ops-repro-trust-5u82n.16.json  br_sync_status.json  config.yaml  manifest.txt
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: acfs-checksums-dispatch.yml  bench.yml  browser-tests.yml  ci.yml  coverage.yml  dist.yml  fuzz.yml  install-test.yml  lighthouse.yml  notify-acfs.yml  perf.yml  release.yml
benches/: bench_utils.rs  cache_micro.rs  crypto_perf.rs  db_perf.rs  export_perf.rs  index_perf.rs  integration_regression.rs  regex_cache.rs  runtime_perf.rs  search_perf.rs
docs/: ACCESSIBILITY.md  COVERAGE_POLICY.md  DOCUMENTATION_STYLE.md  ERROR_CODES.md  FRANKENTUI_UX_ARCHITECTURE.md  PERFORMANCE.md  PROOF_RECIPE.md  RECOVERY.md  RESILIENCE_TEST_MATRIX.md  ROBOT_MODE.md  SUBSYSTEM_COVERAGE_MATRIX.md  VERSION_HISTORY.md  cass_bakeoff_validation.md  ftui_feature_audit.md  ftui_parity_baseline_bundle.md  ftui_visual_parity_manifest.json  ftui_visual_parity_rubric.md  test-coverage-audit.md  tui_keymap_rfc.md  tui_style_spec.md
docs/planning/: ANSWER_PACKS_CONFORMANCE_MATRIX.md  ANSWER_PACKS_CONTRACT.md  MODES_OF_REASONING_REPORT_AND_ANALYSIS_OF_PROJECT.md  PLAN_FOR_ADVANCED_OPTIMIZATIONS_ROUND_1__GPT.md  PLAN_FOR_ADVANCED_OPTIMIZATIONS_ROUND_1__OPUS.md  PLAN_TO_ADD_LIGHTWEIGHT_SEMANTIC_AND_HYBRID_SEARCH_TO_CASS.md  SEMANTIC_SEARCH_BEADS.md  SWARM_OPERATIONS_CONTRACT.md  TESTING.md
docs/reference/: CASS_ARCHITECTURE_SUMMARY.txt  CASS_SEARCH_PATTERNS.md  QUICK_REFERENCE.md  SEARCH_PATTERNS_INDEX.md
fuzz/: Cargo.toml
fuzz/corpus/manifest/: full.json  invalid_types.json  minimal.json  unicode.json
fuzz/fuzz_targets/: chunked.rs  config.rs  decrypt.rs  kdf.rs  manifest.rs
packaging/homebrew/: coding-agent-search.rb
scripts/: bench-report.sh  check_bench_regression.py  coverage.sh  e2e_logging_acceptance_test.sh  generate-gap-report.sh  migration_e2e_validate.sh  test-report.sh  validate-e2e-jsonl.sh  validate_ci.sh  validate_fixtures.sh
scripts/bakeoff/: cass_embedder_e2e.sh  cass_rerank_e2e.sh  cass_validation_e2e.sh
scripts/daemon/: cass_daemon_e2e.sh
scripts/e2e/: cli_flow.sh  connector_stress.sh  daemon_fallback.sh  e2e_logging_acceptance_test.sh  full_coverage_validation.sh  multi_machine_sync.sh  query_parser_e2e.sh  security_paths_e2e.sh  semantic_index.sh  sources_sync.sh
scripts/historical_recovery/: README.md  run_watch_once_batches.py
scripts/lib/: e2e_log.sh
scripts/tests/: generate_evidence_bundle.sh  run_all.sh
src/: bakeoff.rs  bookmarks.rs  connector_ingest_diagnostics.rs  daemon_runtime_state.rs  dependency_drift.rs  dependency_pin_correlation.rs  doctor_chokepoint.rs  doctor_recover.rs  doctor_undo.rs  encryption.rs  evidence_bundle.rs  export.rs  fleet_upgrade_rehearsal.rs  ftui_harness.rs  guide_planner.rs  guide_runner.rs  incident_discovery.rs  lib.rs  main.rs  metric_integrity.rs  operations_dashboard.rs  perf_evidence.rs  recovery_support_bundle.rs  repro_capsule.rs  resource_plan.rs  robot_budget_envelope.rs  search_quality_eval.rs  source_doctor_health.rs  source_onboarding.rs  subsystem_coverage_matrix.rs  swarm_status.rs  top_session_summary.rs  tui_asciicast.rs  update_check.rs
src/analytics/: bucketing.rs  derive.rs  mod.rs  query.rs  types.rs  validate.rs
src/connectors/: aider.rs  amp.rs  chatgpt.rs  claude_code.rs  clawdbot.rs  cline.rs  codex.rs  copilot.rs  copilot_cli.rs  crush.rs  cursor.rs  factory.rs  gemini.rs  grok.rs  mod.rs  openclaw.rs  opencode.rs  pi_agent.rs  vibe.rs
src/daemon/: client.rs  core.rs  mod.rs  models.rs  protocol.rs  resource.rs  worker.rs
src/html_export/: encryption.rs  filename.rs  mod.rs  (+4 more)
target_cass_bb/: .rustc_info.json
test-results/: no_mock_allowlist.json  no_mock_audit.md
tests/: agent_detection_completeness.rs  bakeoff_harness.rs  canonicalize_equivalence.proptest-regressions  canonicalize_equivalence.rs  cass_256_baseline_feature_gate.rs  cli_dispatch_coverage.rs  cli_doctor.rs  cli_flag_precedence.rs  cli_index.rs  cli_robot.rs  cli_search_semantic_flags.rs  cli_stats_source_filter.rs  cli_status_budget.rs  cli_view_archive.rs  cli_view_budget.rs  concurrent_search.rs  connector_aider.rs  connector_chatgpt.rs  connector_claude.rs  connector_clawdbot.rs  connector_cline.rs  connector_codex.rs  connector_copilot.rs  connector_cursor.rs  connector_factory.rs  connector_openclaw.rs  connector_opencode.rs  connector_pi_agent.rs  connector_vibe.rs  cross_workstream_integration.rs  crypto_vectors.rs  daemon_client_integration.rs  deploy_github.rs  doctor_e2e_runner.rs  e2e_cli_flows.rs  e2e_deploy.rs  e2e_error_recovery.rs  e2e_filters.rs  e2e_fleet_upgrade_rehearsal_gate.rs  e2e_full_integration.rs  (+104 more)
(+1739 files in other folders)
