[package]
name = "coding-agent-search"
version = "0.3.6"
edition = "2024"
authors = ["Jeffrey Emanuel"]
description = "Unified TUI search over local coding agent histories"
license-file = "LICENSE"
resolver = "2"
repository = "https://github.com/Dicklesworthstone/coding_agent_session_search"
default-run = "cass"

[dependencies]
anyhow = "*"
thiserror = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "fmt", "ansi"] }
asupersync = { version = "*", git = "https://github.com/Dicklesworthstone/asupersync", rev = "310ff61f", features = ["test-internals", "tls-native-roots"] }
clap = { version = "*", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
clap_complete = "*"
clap_mangen = "*"
indicatif = "*"
console = "*"
colored = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toon = { version = "*", git = "https://github.com/Dicklesworthstone/toon_rust", rev = "5669b72a", package = "tru" }
tempfile = "*"
rmp-serde = "*"  # MessagePack for binary metadata serialization (Opt 3.1)
toml = "*"
directories = "*"
which = "*"
shell-words = "*"
dotenvy = "*"
notify = "*"
frankensqlite = { version = "*", git = "https://github.com/Dicklesworthstone/frankensqlite", rev = "83c0d882", package = "fsqlite", features = ["fts5"] }
rayon = "*"
crossbeam-channel = "*"
parking_lot = "*"
fs2 = "*"
lru = "0.16"
rustc-hash = "*"  # Fast non-cryptographic hashing for cache keys (P1 Opt 1.3), replaces unmaintained fxhash
smallvec = "*"  # Stack-allocated small vectors for hot paths (Opt 4.4)
regex = "*"
portable-pty = "*"
# FrankenTUI migration foundation (bead 2noh9.2.1).
# Strategy: pin a Git revision for reproducible CI builds.
ftui = { version = "*", git = "https://github.com/Dicklesworthstone/frankentui", rev = "2d25a03d" }
ftui-runtime = { version = "*", git = "https://github.com/Dicklesworthstone/frankentui", rev = "2d25a03d", features = ["native-backend", "crossterm-compat"] }
ftui-tty = { version = "*", git = "https://github.com/Dicklesworthstone/frankentui", rev = "2d25a03d" }
ftui-extras = { version = "*", git = "https://github.com/Dicklesworthstone/frankentui", rev = "2d25a03d", default-features = false, features = ["markdown", "syntax", "charts", "canvas", "theme", "clipboard", "clipboard-fallback", "export", "visual-fx", "forms", "validation", "help"] }
dirs = "*"
walkdir = "*"
glob = "*"
base64 = ">=0.21"
blake3 = "*"
mime_guess = "*"
pulldown-cmark = { version = "*", default-features = false, features = ["html"] }
chrono = { version = "*", features = ["serde"] }
semver = "*"
tracing-appender = "*"
strsim = "*"
once_cell = "*"
syntect = "*"
itertools = "*"
crc32fast = "*"
unicode-normalization = "*"
urlencoding = "*"
half = { version = "*", features = ["bytemuck"] }
memmap2 = "*"
bytemuck = "*"
fastembed = { version = "*", default-features = false, features = ["ort-download-binaries-rustls-tls"] }
frankensearch = { version = "*", git = "https://github.com/Dicklesworthstone/frankensearch", rev = "048d5fa8", default-features = false, features = ["hash", "lexical", "ann", "fastembed-reranker"] }
franken-agent-detection = { version = "*", git = "https://github.com/Dicklesworthstone/franken_agent_detection", rev = "88756ba9098ae1cbf8014f2456355b56e688df85", features = ["connectors", "cursor", "chatgpt", "opencode", "crush"] }
wide = "*"  # Portable SIMD for P0 Opt 2: SIMD dot product
arrayvec = "*"  # Stack-based arrays for P1 Opt 1.4: Edge N-gram optimization
bloomfilter = "*"  # Probabilistic membership testing for P2 Opt 3.3: Workspace Cache
hnsw_rs = "*"  # Opt 9: Approximate Nearest Neighbor with HNSW
ouroboros = "*"  # Safe self-referential wrapper for HNSW loader lifetime

# Crypto for ChatGPT encrypted conversations and HTML export encryption
aes-gcm = "*"
ring = "*"
url = "*"
pbkdf2 = "*"  # PBKDF2 key derivation for Web Crypto compatible HTML export encryption

# SHA256 hashing for model verification
sha2 = "*"
hex = "*"

# Interactive terminal prompts for setup wizard
dialoguer = "*"

# SFTP fallback for sync when rsync is unavailable
ssh2 = "*"
# Statically link OpenSSL so release binaries don't require system libssl.so.3
openssl = { version = "*", features = ["vendored"] }
argon2 = "*"
hkdf = "*"
zeroize = { version = "*", features = ["derive"] }
flate2 = "*"
rand = "0.10"

# QR code generation (optional, for recovery secret QR codes)
qrcode = { version = "*", optional = true }
image = { version = "*", optional = true, default-features = false, features = ["png"] }
unicode-width = "0.2.2"
# rusqlite retained for historical bundle salvage: reading pre-migration databases
# via the proven C-SQLite read path (HistoricalReadConnection, FTS schema scrub).
rusqlite = { version = "*", features = ["bundled", "modern_sqlite"] }

# macOS keychain access (optional, for ChatGPT decryption)
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "*"

[features]
default = ["qr", "encryption"]
qr = ["dep:qrcode", "dep:image"]
encryption = []  # Enables HTML export encryption (deps already included for ChatGPT)
backtrace = []
# Opt-in: upgrade sibling repo rev/worktree drift from warning to hard error and
# validate the optional /data/projects path checkouts before enabling local overrides.
strict-path-dep-validation = []

[build-dependencies]
vergen = { version = "*", default-features = false, features = ["build", "cargo"] }
toml = "*"

[dev-dependencies]
assert_cmd = "*"
predicates = "*"
insta = { version = "*", features = ["yaml", "json"] }
criterion = "*"
once_cell = "*"
serial_test = "*"
proptest = "*"
serde_yaml = "*"
rand = "0.10"
rand_chacha = "0.10"
# frankensqlite compat gate tests (bead 3vvqa) — fsqlite-types needed for SqliteValue
# enum variants in test assertions. The main fsqlite dep is available as `frankensqlite`.
fsqlite-types = { version = "*", git = "https://github.com/Dicklesworthstone/frankensqlite", rev = "83c0d882", package = "fsqlite-types" }

[[bin]]
name = "cass"
path = "src/main.rs"
test = false

[[bin]]
name = "cass-pages-perf-bundle"
path = "src/bin/cass-pages-perf-bundle.rs"
test = false

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

# Optimized build with symbols for profiling (perf/flamegraphs).
# Usage: RUSTFLAGS="-C force-frame-pointers=yes" cargo build --profile profiling
[profile.profiling]
inherits = "release"
debug = true
strip = false

# TODO: Unify the asupersync version split. The lockfile currently carries
# three copies of asupersync 0.2.9:
# - crates.io via frankensqlite
# - git `08dd31df` via frankensearch
# - git `2028c111` via cass directly
# Keep the optional asupersync [patch] block disabled until the sibling repos
# are validated together against the release lockfile and CI matrix.
# [patch."https://github.com/Dicklesworthstone/asupersync"]
# asupersync = { path = "../asupersync" }
# franken-decision = { path = "../asupersync/franken_decision" }
# franken-evidence = { path = "../asupersync/franken_evidence" }
# franken-kernel = { path = "../asupersync/franken_kernel" }
# [patch.crates-io]
# asupersync = { path = "../asupersync" }
# franken-decision = { path = "../asupersync/franken_decision" }
# franken-evidence = { path = "../asupersync/franken_evidence" }
# franken-kernel = { path = "../asupersync/franken_kernel" }
# build.rs validates the committed path overrides below and can validate the
# optional sibling repos above when `strict-path-dep-validation` is enabled.
#
# LOCAL DEVELOPMENT: Uncomment the [patch] sections below to build against
# local sibling repo checkouts instead of pinned git revisions. These are
# commented out by default so that a clean clone builds without requiring
# specific directory layout. See build.rs for validation details.
#
# A fresh-clone build regression guard runs in CI (.github/workflows/fresh-clone-build.yml)
# — if you re-enable any of these [patch] blocks, that workflow will fail.
#
# [patch."https://github.com/Dicklesworthstone/frankensqlite"]
# fsqlite = { path = "../frankensqlite/crates/fsqlite" }
# fsqlite-types = { path = "../frankensqlite/crates/fsqlite-types" }
# [patch."https://github.com/Dicklesworthstone/franken_agent_detection"]
# franken-agent-detection = { path = "../franken_agent_detection" }
#
# Enable strict validation before uncommenting any additional sibling path overrides:
# cargo check --features strict-path-dep-validation
#[patch."https://github.com/Dicklesworthstone/frankensearch"]
# frankensearch = { path = "../frankensearch/frankensearch" }
# frankensearch-core = { path = "../frankensearch/crates/frankensearch-core" }
# frankensearch-index = { path = "../frankensearch/crates/frankensearch-index" }
# frankensearch-embed = { path = "../frankensearch/crates/frankensearch-embed" }
# frankensearch-fusion = { path = "../frankensearch/crates/frankensearch-fusion" }
# frankensearch-lexical = { path = "../frankensearch/crates/frankensearch-lexical" }
# frankensearch-rerank = { path = "../frankensearch/crates/frankensearch-rerank" }

[workspace.metadata.dist]
targets = ["x86_64-unknown-linux-gnu"]
installers = ["shell", "powershell"]
ci = ["github"]

[[bench]]
name = "index_perf"
harness = false

[[bench]]
name = "runtime_perf"
harness = false

[[bench]]
name = "search_perf"
harness = false

[[bench]]
name = "search_latency_e2e"
harness = false

[[bench]]
name = "crypto_perf"
harness = false

[[bench]]
name = "db_perf"
harness = false

[[bench]]
name = "export_perf"
harness = false

[[bench]]
name = "cache_micro"
harness = false

[[bench]]
name = "regex_cache"
harness = false

[[bench]]
name = "integration_regression"
harness = false

[[test]]
name = "docs"
path = "tests/docs/mod.rs"

[[test]]
name = "upgrade"
path = "tests/upgrade/mod.rs"

[[test]]
name = "recovery"
path = "tests/recovery/mod.rs"
