[package]
name = "cass-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# This crate is not part of the main workspace
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
base64 = "0.22"
serde_json = "1"
tempfile = "3"

[dependencies.coding-agent-search]
path = ".."

# Fuzz targets - each gets its own binary

[[bin]]
name = "fuzz_decrypt"
path = "fuzz_targets/decrypt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_kdf"
path = "fuzz_targets/kdf.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_manifest"
path = "fuzz_targets/manifest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_chunked"
path = "fuzz_targets/chunked.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_config"
path = "fuzz_targets/config.rs"
test = false
doc = false
bench = false
